# Copyright (C) 2012 Justin R. Cutler
#
# libfcd is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libfcd is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with libfcd.  If not, see <http://www.gnu.org/licenses/>.

##
## Targets
##

bin_PROGRAMS = fcd fcd-flash
lib_LTLIBRARIES = libfcd.la

##
## Target Rules
##

AM_CPPFLAGS = -I$(top_srcdir)/include

fcd_SOURCES = src/main.c
fcd_LDADD = libfcd.la

fcd_flash_SOURCES = src/flash.c
fcd_flash_LDADD = libfcd.la

libfcd_la_SOURCES = \
  lib/fcd_common.c \
  lib/fcd_bootloader.c \
  lib/fcd_application.c
libfcd_la_CPPFLAGS = \
  $(AM_CPPFLAGS) \
  -I$(top_srcdir)/lib
libfcd_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
libfcd_la_LIBADD  = @AX_SS_LIB@

if LIBUSB
  libfcd_la_SOURCES  += hidapi/hid-libusb.c
  libfcd_la_CPPFLAGS += $(LIBUSB_CFLAGS)
  libfcd_la_LIBADD   += $(LIBUSB_LIBS)
endif
if MACOSX
  libfcd_la_SOURCES += hidapi/hid-macosx.c
  libfcd_la_LDFLAGS += -framework IOKit -framework CoreFoundation
endif
if WINDOWS
  libfcd_la_SOURCES += hidapi/hid-windows.c
  libfcd_la_LIBADD  += -lsetupapi
  libfcd_la_LDFLAGS += -no-undefined
endif

##
## Packaging
##

include_HEADERS = \
  include/fcd.h \
  include/fcd_tuner.h

noinst_HEADERS = \
  lib/fcd_cmd.h \
  lib/fcd_common.h \
  hidapi/hidapi.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfcd.pc

dist_noinst_SCRIPTS = bootstrap

EXTRA_DIST = \
  hidapi/AUTHORS.txt \
  hidapi/LICENSE-bsd.txt \
  hidapi/LICENSE-gpl3.txt \
  hidapi/LICENSE-orig.txt \
  hidapi/LICENSE.txt

##
## Cleanup
##

# remove files generated by bootstrap
MAINTAINERCLEANFILES = \
  $(srcdir)/Makefile.in \
  $(srcdir)/aclocal.m4 \
  $(srcdir)/config.h.in \
  $(srcdir)/config.h.in~ \
  $(srcdir)/configure \
  $(srcdir)/m4/libtool.m4 \
  $(srcdir)/m4/lt~obsolete.m4 \
  $(srcdir)/m4/ltoptions.m4 \
  $(srcdir)/m4/ltsugar.m4 \
  $(srcdir)/m4/ltversion.m4

# remove aux directory (generated by bootstrap)
maintainer-clean-local:
	-rm -rf $(ac_aux_dir)

##
## Settings
##

ACLOCAL_AMFLAGS = -I m4
